edit button working properly!

--- a/gym_app/src/main/resources/templates/customers/edit_customer.html
+++ b/gym_app/src/main/resources/templates/customers/edit_customer.html
@@ -17,7 +17,7 @@
 <div class="col-md-4">
 
 
-    <form action="#" th:action="@{/customer}" name="Add new customer" th:object="${customer}" th:method="POST">
+    <form action="#" th:action="@{/customer/edit}" name="Add new customer" th:object="${customer}" th:method="POST">
         <input th:field="*{id}" type="hidden">
 
         <div class="mb-3">
