--- a/gym_app/src/main/resources/templates/customers/edit_customer.html
+++ b/gym_app/src/main/resources/templates/customers/edit_customer.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="/webjars/bootstrap/5.1.0/css/bootstrap.min.css">
+    <link href="/webjars/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/37d01ba303.js"></script>
     <meta charset="UTF-8">
     <title>Edit Customer</title>
 </head>
 <body>
-<h2 style="color: aqua; text-align: center">Edit here</h2>
-
+<h2 style="color: black; text-align: center">Edit here</h2>
 <form action="#" th:action="@{/customers/save_customer}">
-
 </form>
-
 <div class="col-md-4">
-
-
-    <form action="#" th:action="@{/customer/edit}" name="Add new customer" th:object="${customer}" th:method="POST">
+    <form action="#" name="Edit customer" th:action="@{/customer/edit}" th:method="POST" th:object="${customer}">
         <input th:field="*{id}" type="hidden">
-
         <div class="mb-3">
-            <label class="form-label" for="customerName">First name</label>
-            <input aria-describedby="emailHelp" class="form-control" id="customerName" th:field="*{customerName}"
-                   type="text">
+            <label class="form-label" for="customerName">Name</label>
+            <input aria-describedby="emailHelp" class="form-control" id="customerName" required
+                   th:field="*{customerName}" type="text">
+            <div style="color: red" th:errors="*{customerName}" th:if="${#fields.hasErrors('customerName')}">Name
+                error
+            </div>
         </div>
         <div class="mb-3">
-            <label class="form-label" for="customerSurname">Last name</label>
-            <input class="form-control" id="customerSurname" th:field="*{customerSurname}" type="text">
+            <label class="form-label" for="lastName">Last name</label>
+            <input class="form-control" id="lastName" required th:field="*{customerSurname}" type="text">
+            <div style="color: red" th:errors="*{customerSurname}" th:if="${#fields.hasErrors('customerSurname')}">
+                Surname error
+            </div>
+
         </div>
         <div class="mb-3">
             <label class="form-label" for="personal_code">Personal code</label>
             <input class="form-control" id="personal_code" required th:field="*{personalCode}" type="text">
-<!--            <div style="color: red" th:errors="*{personalCode}" th:if="${#fields.hasErrors('personalCode')}">-->
-<!--                Personal code error-->
-<!--            </div>-->
+            <div style="color: red" th:errors="*{personalCode}" th:if="${#fields.hasErrors('personalCode')}">
+                Personal code error
+            </div>
         </div>
         <div class="mb-3">
             <label class="form-label" for="email">Email</label>
-            <input aria-describedby="emailHelp" class="form-control" id="email" th:field="*{customerEmail}" type="email">
+            <input aria-describedby="emailHelp" class="form-control" id="email" required
+                   th:field="*{customerEmail}" type="email">
         </div>
-
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
 </div>
-
-
 <br>
-<a href="/customer">go back</a>
+<a class="btn btn-primary" href="/customer">Go back</a>
 </body>
 </html>
